# router/router.go
@@ -27,6 +27,7 @@ func Router() *mux.Router {
 	router.HandleFunc("/api/v1/event/detail/{id}", controller.AmbilDetailEvent).Methods("GET")
 	router.HandleFunc("/api/v1/event/cekticket/{bookingcode}", controller.CekTicket).Methods("POST")
 	router.HandleFunc("/api/v1/event/registrasi", controller.Registrasi).Methods("POST")
+	router.HandleFunc("/api/v1/event/registrasi/pembayaran", controller.Pembayaran).Methods("POST")
 	router.PathPrefix("/").Handler(httpSwagger.WrapHandler)
 
 	return router
